[FEATURE] checkbox for selecting image size

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "Default",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "Ukuran gambar yang disarankan: 1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "Versi seluler",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "Thumbnail",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "Ukuran gambar yang disarankan: 600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "Paket Periode",
@@ -2021,9 +2023,18 @@
   "program.ProgramCollectionSelector.sortAsc": "Urutan positif",
   "program.ProgramCollectionSelector.sortDesc": "Urutan terbalik",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": "Konten Artikel",
+  "program.ProgramContentSectionAdminCard.createContent": "Tambahkan Konten",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Hapus Bagian",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": "Latihan Pekerjaan Rumah",
+  "program.ProgramContentSectionAdminCard.programExercise": "Latihan di kelas",
+  "program.ProgramContentSectionAdminCard.videoContent": "Konten Video",
   "program.ProgramPackageSelector.allProgramPackage": "Semua kombinasi kursus",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "tak terlihat",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Peserta terlihat",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2045,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "Peserta terlihat",
   "program.ProgramPlanAdminModal.visible": "terlihat",
-  "program.ProgramPlanAdminModal.invisible": "tak terlihat",
   "program.event.editIssueFailed": "Sunting masalah gagal",
   "program.label.allProgram": "Semua Program",
   "program.label.allowMultipleAnswers": "Izinkan beberapa jawaban benar",
@@ -2130,28 +2139,26 @@
   "program.text.unfinishedQuestions": "Konten yang belum selesai: {questions}",
   "program.text.uploadVideo": "Unggah Video",
   "program.text.videoPlaceholder": "url video",
+  "program.ui.articleContent": "Konten artikel",
   "program.ui.checkProgramContent": "Periksa konten program",
   "program.ui.chooseFile": "Pilih File",
-  "program.ui.videoContent": "Konten video",
-  "program.ui.articleContent": "Konten artikel",
-  "program.ProgramContentSectionAdminCard.createContent": "Tambahkan Konten",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Tambahkan opsi",
   "program.ui.createExerciseQuestion": "Tambahkan Pertanyaan",
   "program.ui.delete": "Hapus file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Hapus Konten",
   "program.ui.deleteQuestion": "Hapus Pertanyaan",
-  "program.ProgramContentSectionAdminCard.deleteSection": "Hapus Bagian",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Aktifkan",
   "program.ui.delivery": "Kursus Pengiriman",
   "program.ui.difficulty": "Kesulitan",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Kelola Teks",
-  "program.ProgramContentSectionAdminCard.practiceContent": "Latihan Pekerjaan Rumah",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Pratinjau",
-  "program.ProgramContentSectionAdminCard.videoContent": "Konten Video",
-  "program.ProgramContentSectionAdminCard.articleContent": "Konten Artikel",
-  "program.ProgramContentSectionAdminCard.programExercise": "Latihan di kelas",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Unggah ulang",
   "program.ui.sortContents": "Urutkan Konten",
   "program.ui.sortProgram": "Urutkan Program",
@@ -2161,6 +2168,7 @@
   "program.ui.uploadMaterial": "Unggah Materi",
   "program.ui.uploadVideo": "Unggah Video",
   "program.ui.uploadedCaptions": "Teks yang Diunggah",
+  "program.ui.videoContent": "Konten video",
   "programPackage.ProgramPackageBasicFrom.tag": "menandai",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
