--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "Đặt trước",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "Kích thước hình ảnh được đề xuất：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "Phiên bản điện thoại",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "Rút lại",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "Kích thước hình ảnh được đề xuất：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "Thời gian giới hạn",
@@ -2021,9 +2023,18 @@
   "program.ProgramCollectionSelector.sortAsc": " Thứ tự tích cực ",
   "program.ProgramCollectionSelector.sortDesc": " Đảo ngược thứ tự ",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": " Nội dung bài viết",
+  "program.ProgramContentSectionAdminCard.createContent": "Thêm nội dung",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": " Thực hành Bài tập về nhà ",
+  "program.ProgramContentSectionAdminCard.programExercise": " Bài tập trong lớp ",
+  "program.ProgramContentSectionAdminCard.videoContent": " Nội dung video",
   "program.ProgramPackageSelector.allProgramPackage": "Tất cả các khóa học",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "vô hình",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Người tham gia có thể nhìn thấy",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2045,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "Người tham gia có thể nhìn thấy",
   "program.ProgramPlanAdminModal.visible": "có thể nhìn thấy",
-  "program.ProgramPlanAdminModal.invisible": "vô hình",
   "program.event.editIssueFailed": "Chỉnh sửa sự cố không thành công",
   "program.label.allProgram": "Tất cả chương trình",
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
@@ -2130,28 +2139,26 @@
   "program.text.unfinishedQuestions": "Nội dung bất ngờ:{questions}",
   "program.text.uploadVideo": " Tải lên Video ",
   "program.text.videoPlaceholder": "url video",
+  "program.ui.articleContent": "Nội dung bài viết",
   "program.ui.checkProgramContent": "Kiểm tra nội dung chương trình",
   "program.ui.chooseFile": " Chọn tệp ",
-  "program.ui.videoContent": "Nội dung video",
-  "program.ui.articleContent": "Nội dung bài viết",
-  "program.ProgramContentSectionAdminCard.createContent": "Thêm nội dung",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": " Thêm tùy chọn ",
   "program.ui.createExerciseQuestion": " Thêm câu hỏi ",
   "program.ui.delete": " Xóa tệp ",
   "program.ui.deleteChoice": "DeleteChoice ",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteQuestion": " Xóa câu hỏi ",
-  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": " Bật ",
   "program.ui.delivery": " Khóa học Giao hàng ",
   "program.ui.difficulty": " Khó khăn ",
   "program.ui.editProgram": " Chỉnh sửa chương trình ",
   "program.ui.manageCaption": " Quản lý Phụ đề ",
-  "program.ProgramContentSectionAdminCard.practiceContent": " Thực hành Bài tập về nhà ",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": " Xem trước ",
-  "program.ProgramContentSectionAdminCard.videoContent": " Nội dung video",
-  "program.ProgramContentSectionAdminCard.articleContent": " Nội dung bài viết",
-  "program.ProgramContentSectionAdminCard.programExercise": " Bài tập trong lớp ",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Tải lại ",
   "program.ui.sortContents": " Sắp xếp nội dung ",
   "program.ui.sortProgram": "Sắp xếp chương trình",
@@ -2161,6 +2168,7 @@
   "program.ui.uploadMaterial": " Tải lên tài liệu ",
   "program.ui.uploadVideo": "Tải lên Video",
   "program.ui.uploadedCaptions": " Phụ đề đã Tải lên ",
+  "program.ui.videoContent": "Nội dung video",
   "programPackage.ProgramPackageBasicFrom.tag": "Nhãn mác",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
