--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "預設",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "建議圖片尺寸：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "手機版",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "縮圖",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "建議圖片尺寸：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "限時方案",
@@ -2025,9 +2027,18 @@
   "program.ProgramCollectionSelector.sortAsc": "正序",
   "program.ProgramCollectionSelector.sortDesc": "倒序",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": "圖文內容",
+  "program.ProgramContentSectionAdminCard.createContent": "新增內容",
+  "program.ProgramContentSectionAdminCard.deleteSection": "刪除區塊",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": "作業練習",
+  "program.ProgramContentSectionAdminCard.programExercise": "隨堂測驗",
+  "program.ProgramContentSectionAdminCard.videoContent": "影片內容",
   "program.ProgramPackageSelector.allProgramPackage": "全部課程組合",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "隱藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "購買人數",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2038,9 +2049,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "購買人數",
   "program.ProgramPlanAdminModal.visible": "顯示",
-  "program.ProgramPlanAdminModal.invisible": "隱藏",
   "program.event.editIssueFailed": "無法更改問題",
   "program.label.allProgram": "全部課程",
   "program.label.allowMultipleAnswers": "允許多個正確解答",
@@ -2105,7 +2114,7 @@
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deletePracticeWarning": "將刪除所有與此作業相關資料且不可復原，確定要刪除嗎？",
   "program.text.deleteQuestionDescription": "題目刪除即不可恢復，確定要刪除嗎？",
-  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "沒有課程問題",
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
@@ -2134,28 +2143,26 @@
   "program.text.unfinishedQuestions": "未完成內容：{questions}",
   "program.text.uploadVideo": "上傳影片",
   "program.text.videoPlaceholder": "貼上影片網址",
+  "program.ui.articleContent": "圖文內容",
   "program.ui.checkProgramContent": "查看課程內容",
   "program.ui.chooseFile": "選擇檔案",
-  "program.ui.videoContent": "影片內容",
-  "program.ui.articleContent": "圖文內容",
-  "program.ProgramContentSectionAdminCard.createContent": "新增內容",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增選項",
   "program.ui.createExerciseQuestion": "新增題目",
   "program.ui.delete": "刪除檔案",
   "program.ui.deleteChoice": "刪除選項",
   "program.ui.deleteContent": "刪除內容",
   "program.ui.deleteQuestion": "刪除題目",
-  "program.ProgramContentSectionAdminCard.deleteSection": "刪除區塊",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "啟用",
   "program.ui.delivery": "交付課程",
   "program.ui.difficulty": "難易度",
   "program.ui.editProgram": "編輯課程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ProgramContentSectionAdminCard.practiceContent": "作業練習",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "預覽",
-  "program.ProgramContentSectionAdminCard.videoContent": "影片內容",
-  "program.ProgramContentSectionAdminCard.articleContent": "圖文內容",
-  "program.ProgramContentSectionAdminCard.programExercise": "隨堂測驗",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上傳",
   "program.ui.sortContents": "排序內容",
   "program.ui.sortProgram": "課程排序",
@@ -2165,6 +2172,7 @@
   "program.ui.uploadMaterial": "上傳教材",
   "program.ui.uploadVideo": "上傳影片",
   "program.ui.uploadedCaptions": "已上傳字幕",
+  "program.ui.videoContent": "影片內容",
   "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
