--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "預設",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "建議圖片尺寸：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "手機版",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "縮圖",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "建議圖片尺寸：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "限時方案",
@@ -2021,9 +2023,18 @@
   "program.ProgramCollectionSelector.sortAsc": "Positive order",
   "program.ProgramCollectionSelector.sortDesc": "Reverse order",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": "Article Content",
+  "program.ProgramContentSectionAdminCard.createContent": "Add Content",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": "Homework Practice",
+  "program.ProgramContentSectionAdminCard.programExercise": "Exercise in class",
+  "program.ProgramContentSectionAdminCard.videoContent": "Video Content",
   "program.ProgramPackageSelector.allProgramPackage": "全部課程組合",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "invisible",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Participants visible",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2045,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "Participants visible",
   "program.ProgramPlanAdminModal.visible": "visible",
-  "program.ProgramPlanAdminModal.invisible": "invisible",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
   "program.label.allowMultipleAnswers": "Allow multiple correct answers",
@@ -2130,28 +2139,26 @@
   "program.text.unfinishedQuestions": "Unfinished content: {questions}",
   "program.text.uploadVideo": "Upload Video",
   "program.text.videoPlaceholder": "video url",
+  "program.ui.articleContent": "Article content",
   "program.ui.checkProgramContent": "Check program content",
   "program.ui.chooseFile": "Choose File",
-  "program.ui.videoContent": "Video content",
-  "program.ui.articleContent": "Article content",
-  "program.ProgramContentSectionAdminCard.createContent": "Add Content",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Add option",
   "program.ui.createExerciseQuestion": "Add Question",
   "program.ui.delete": "Delete file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Delete Content",
   "program.ui.deleteQuestion": "Delete Question",
-  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Enable",
   "program.ui.delivery": "Delivery Course",
   "program.ui.difficulty": "Difficulty",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Manage Captions",
-  "program.ProgramContentSectionAdminCard.practiceContent": "Homework Practice",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Preview",
-  "program.ProgramContentSectionAdminCard.videoContent": "Video Content",
-  "program.ProgramContentSectionAdminCard.articleContent": "Article Content",
-  "program.ProgramContentSectionAdminCard.programExercise": "Exercise in class",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Reupload",
   "program.ui.sortContents": "Sort Contents",
   "program.ui.sortProgram": "Sort Program",
@@ -2161,6 +2168,7 @@
   "program.ui.uploadMaterial": "Upload Material",
   "program.ui.uploadVideo": "Upload Video",
   "program.ui.uploadedCaptions": "Uploaded Captions",
+  "program.ui.videoContent": "Video content",
   "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
