--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -63,6 +63,8 @@
   "ProgramAdminPage.ProgramCoverForm.default": "预设",
   "ProgramAdminPage.ProgramCoverForm.defaultImageTips": "建议图片尺寸：1200*675px",
   "ProgramAdminPage.ProgramCoverForm.mobile": "手机版",
+  "ProgramAdminPage.ProgramCoverForm.notUploaded": "*尚未上傳",
+  "ProgramAdminPage.ProgramCoverForm.showOriginSize": "以原圖尺寸顯示",
   "ProgramAdminPage.ProgramCoverForm.thumbnail": "缩图",
   "ProgramAdminPage.ProgramCoverForm.thumbnailImageTips": "建议图片尺寸：600*338px",
   "ProgramAdminPage.ProgramPlanAdminBlock.periodPlan": "限时方案",
@@ -2021,9 +2023,18 @@
   "program.ProgramCollectionSelector.sortAsc": "正序",
   "program.ProgramCollectionSelector.sortDesc": "倒序",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
+  "program.ProgramContentSectionAdminCard.articleContent": "图文内容",
+  "program.ProgramContentSectionAdminCard.createContent": "新增内容",
+  "program.ProgramContentSectionAdminCard.deleteSection": "删除区块",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.practiceContent": "作业练习",
+  "program.ProgramContentSectionAdminCard.programExercise": "随堂测验",
+  "program.ProgramContentSectionAdminCard.videoContent": "视频内容",
   "program.ProgramPackageSelector.allProgramPackage": "全部课程组合",
   "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
   "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.invisible": "隐藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "购买人数",
   "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
@@ -2034,9 +2045,7 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
-  "program.ProgramPlanAdminModal.isParticipantsVisible": "购买人数",
   "program.ProgramPlanAdminModal.visible": "显示",
-  "program.ProgramPlanAdminModal.invisible": "隐藏",
   "program.event.editIssueFailed": "无法更改问题",
   "program.label.allProgram": "全部课程",
   "program.label.allowMultipleAnswers": "允许多个正确解答",
@@ -2130,28 +2139,26 @@
   "program.text.unfinishedQuestions": "未完成内容：{questions}",
   "program.text.uploadVideo": "上传影片",
   "program.text.videoPlaceholder": "贴上影片网址",
+  "program.ui.articleContent": "图文内容",
   "program.ui.checkProgramContent": "查看课程内容",
   "program.ui.chooseFile": "选择档案",
-  "program.ui.videoContent": "视频内容",
-  "program.ui.articleContent": "图文内容",
-  "program.ProgramContentSectionAdminCard.createContent": "新增内容",
+  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增选项",
   "program.ui.createExerciseQuestion": "新增题目",
   "program.ui.delete": "删除档案",
   "program.ui.deleteChoice": "删除选项",
   "program.ui.deleteContent": "删除内容",
   "program.ui.deleteQuestion": "删除题目",
-  "program.ProgramContentSectionAdminCard.deleteSection": "删除区块",
+  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "启用",
   "program.ui.delivery": "交付课程",
   "program.ui.difficulty": "难易度",
   "program.ui.editProgram": "编辑课程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ProgramContentSectionAdminCard.practiceContent": "作业练习",
+  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "预览",
-  "program.ProgramContentSectionAdminCard.videoContent": "视频内容",
-  "program.ProgramContentSectionAdminCard.articleContent": "图文内容",
-  "program.ProgramContentSectionAdminCard.programExercise": "随堂测验",
+  "program.ui.programContent": "課程內容",
+  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上传",
   "program.ui.sortContents": "排序内容",
   "program.ui.sortProgram": "课程排序",
@@ -2161,6 +2168,7 @@
   "program.ui.uploadMaterial": "上传教材",
   "program.ui.uploadVideo": "上传影片",
   "program.ui.uploadedCaptions": "已上传字幕",
+  "program.ui.videoContent": "视频内容",
   "programPackage.ProgramPackageBasicFrom.tag": "标签",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
