--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -449,10 +449,6 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
-  "common.category.all": "全部產品",
-  "common.category.specify": "指定產品",
-  "common.category.specifyCouponPlan": "指定折價方案",
-  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "取消訂閱成功",
@@ -519,7 +515,6 @@
   "common.label.currentPosition": "目前排序：{position}",
   "common.label.customTitle": "{customTitle}",
   "common.label.date": "日期",
-  "common.label.dateRange": "日期範圍",
   "common.label.default": "預設",
   "common.label.description": "描述",
   "common.label.desktop": "電腦版",
@@ -580,14 +575,8 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph 設定",
   "common.label.optional": "非必填",
-  "common.label.orderCategory": "訂單項目",
-  "common.label.orderDiscountId": "折扣編號",
-  "common.label.orderDiscountName": "折扣名稱",
-  "common.label.orderDiscountPrice": "折扣金額",
   "common.label.orderDiscountPriceTotal": "折扣總額",
   "common.label.orderDiscountType": "折扣類別",
-  "common.label.orderLogCategory": "訂單項目",
-  "common.label.orderLogCreatedDate": "建立日期",
   "common.label.orderLogDate": "訂單日期",
   "common.label.orderLogId": "訂單編號",
   "common.label.orderLogMemberEmail": "會員信箱",
@@ -599,14 +588,11 @@
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "項目數量",
   "common.label.orderProductAutoRenew": "自動續訂",
-  "common.label.orderProductId": "項目編號",
   "common.label.orderProductName": "項目名稱",
   "common.label.orderProductPrice": "項目金額",
   "common.label.orderProductPriceTotal": "項目總額",
   "common.label.orderProductType": "項目種類",
-  "common.label.orderStatus": "訂單狀態",
   "common.label.originalPrice": "原價",
-  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.ownedCoins": "持有代幣",
   "common.label.owner": "建立者",
   "common.label.pageTitle": "Page Title",
@@ -678,7 +664,6 @@
   "common.label.tag": "標籤",
   "common.label.tags": "標籤",
   "common.label.teachingAssistant": "助教",
-  "common.label.timeRange": "日期範圍",
   "common.label.timerVisible": "顯示倒數計時器",
   "common.label.title": "名稱",
   "common.label.totalPrice": "總金額",
@@ -1662,7 +1647,6 @@
   "merchandise.ui.shippingStoreName": "收件門市",
   "merchandiseInventory.label.currentInventory": "庫存",
   "merchandiseInventory.label.sold": "已售",
-  "order.label.gift": "贈品項目",
   "order.label.hasPaid": "已支付",
   "order.label.hasRefunded": "已退款",
   "order.label.invoiceAddress": "發票地址",
@@ -1670,43 +1654,17 @@
   "order.label.invoiceDonationCode": "發票捐贈碼",
   "order.label.invoiceEmail": "發票信箱",
   "order.label.invoiceId": "發票編號",
-  "order.label.invoiceIssuedAt": "發票開立時間",
   "order.label.invoiceName": "發票姓名",
   "order.label.invoicePhone": "發票電話",
-  "order.label.invoiceStatus": "發票狀態",
   "order.label.invoiceTarget": "發票對象",
   "order.label.invoiceUniformNumber": "發票統編",
   "order.label.invoiceUniformTitle": "發票抬頭",
-  "order.label.memberEmail": "會員信箱",
-  "order.label.memberName": "會員姓名",
-  "order.label.orderCountry": "下單國家",
-  "order.label.orderCreatedAt": "訂單建立時間",
   "order.label.orderDiscountName": "折扣名稱",
-  "order.label.orderDiscountTotalPrice": "折扣總額",
-  "order.label.orderLogExecutor": "承辦人與分潤",
-  "order.label.orderLogId": "訂單編號",
   "order.label.orderLogStatus": "訂單狀態",
-  "order.label.orderLogTotalPrice": "訂單總額",
   "order.label.orderLogUpdatedAt": "訂單更新時間",
-  "order.label.orderProductCount": "項目總數",
-  "order.label.orderProductName": "項目名稱",
-  "order.label.orderProductTotalPrice": "項目總額",
   "order.label.paidPrice": "支付金額",
-  "order.label.paymentLogDetails": "付款方式",
-  "order.label.paymentLogGateway": "交易渠道",
-  "order.label.paymentLogNo": "交易編號",
   "order.label.paymentLogPaidAt": "付款時間",
-  "order.label.productEndedAt": "項目到期時間",
-  "order.label.productOwner": "創作者",
-  "order.label.productPrice": "項目金額",
-  "order.label.productQuantity": "項目數量",
-  "order.label.productType": "項目類別",
-  "order.label.recipientAddress": "收件地址",
-  "order.label.recipientName": "收件人",
-  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "推薦人",
-  "order.label.sharingCode": "推廣網址",
-  "order.label.sharingNote": "推廣備註",
   "order.text.modifyOrderStatusDescription": "此操作僅更改狀態顯示並控制使用者權限，實際退款或金額異動請到金流平台操作。",
   "order.ui.modifyOrderStatus": "變更訂單狀態",
   "page.*.all": "全部",
@@ -2225,6 +2183,8 @@
   "project.*.sortProjectPlan": "方案排序",
   "project.*.sponsor": "發起者",
   "project.*.unnamedProject": "未命名專案",
+  "project.ProgramPackageBasicFrom.notUploaded": "*尚未上傳",
+  "project.ProgramPackageBasicFrom.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectAdminPage.deletePortfolio": "刪除作品",
   "project.ProjectAdminPage.portfolioContent": "作品內容",
   "project.ProjectAdminPage.portfolioDescription": "作品描述",
@@ -2236,9 +2196,21 @@
   "project.ProjectCollectionTable.author": "作者",
   "project.ProjectCollectionTable.mark": "標記",
   "project.ProjectCollectionTable.title": "名稱",
+  "project.ProjectIntroForm.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
+  "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
+  "project.ProjectIntroForm.notUploaded": "*尚未上傳",
+  "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectParticipantBlock.occupationFieldRequired": "請選擇職位",
   "project.ProjectParticipantBlock.participantFieldRequired": "請選擇參與者",
   "project.ProjectPlanAdminModal.deliverables": "交付項目",
+  "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
+  "project.ProjectPlanAdminModal.isPublished": "是否開賣",
+  "project.ProjectPlanAdminModal.notUploaded": "*尚未上傳",
+  "project.ProjectPlanAdminModal.planDescription": "方案描述",
+  "project.ProjectPlanAdminModal.published": "發售，專案上架後立即開賣",
+  "project.ProjectPlanAdminModal.saveProjectPlan": "儲存方案",
+  "project.ProjectPlanAdminModal.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectPlanAdminModal.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
   "project.ProjectPlanCard.sku": "SKU",
@@ -2390,6 +2362,19 @@
   "questionLibrary.ui.isAnswer": "此為正確解答",
   "questionLibrary.ui.sortQuestions": "排序題目",
   "questionLibrary.ui.useZhuYinFont": "使用注音字形",
+  "sale.*.activityTicket": "活動票券",
+  "sale.*.appointmentPlan": "預約",
+  "sale.*.cancel": "取消",
+  "sale.*.card": "會員卡",
+  "sale.*.isRequired": "請輸入{field}",
+  "sale.*.merchandiseSpec": "商品規格",
+  "sale.*.podcastPlan": "廣播頻道",
+  "sale.*.podcastProgram": "廣播",
+  "sale.*.program": "單次課程",
+  "sale.*.programContent": "課程內容",
+  "sale.*.programPackagePlan": "課程組合",
+  "sale.*.programPlan": "課程方案",
+  "sale.*.projectPlan": "專案方案",
   "sale.InvoiceCard.donationCode": "發票捐贈碼",
   "sale.InvoiceCard.invoiceAddress": "發票地址",
   "sale.InvoiceCard.invoiceCarrier": "發票載具",
@@ -2416,6 +2401,81 @@
   "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
   "sale.OrderDetailDrawer.otherInfo": "其他資訊",
   "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderExportModal.all": "全部產品",
+  "sale.OrderExportModal.dateRange": "日期範圍",
+  "sale.OrderExportModal.exportOrder": "匯出資料",
+  "sale.OrderExportModal.exportOrderDiscount": "折扣明細",
+  "sale.OrderExportModal.exportOrderLog": "匯出總表",
+  "sale.OrderExportModal.exportOrderProduct": "訂單明細",
+  "sale.OrderExportModal.exportPaymentLog": "交易明細",
+  "sale.OrderExportModal.gift": "贈品項目",
+  "sale.OrderExportModal.invoiceAddress": "發票地址",
+  "sale.OrderExportModal.invoiceCarrier": "發票載具",
+  "sale.OrderExportModal.invoiceDonationCode": "發票捐贈碼",
+  "sale.OrderExportModal.invoiceEmail": "發票信箱",
+  "sale.OrderExportModal.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.OrderExportModal.invoiceId": "發票編號",
+  "sale.OrderExportModal.invoiceIssuedAt": "發票開立時間",
+  "sale.OrderExportModal.invoiceName": "發票姓名",
+  "sale.OrderExportModal.invoicePending": "未開立電子發票",
+  "sale.OrderExportModal.invoicePhone": "發票電話",
+  "sale.OrderExportModal.invoiceStatus": "發票狀態",
+  "sale.OrderExportModal.invoiceSuccess": "開立成功",
+  "sale.OrderExportModal.invoiceTarget": "發票對象",
+  "sale.OrderExportModal.invoiceUniformNumber": "發票統編",
+  "sale.OrderExportModal.invoiceUniformTitle": "發票抬頭",
+  "sale.OrderExportModal.memberEmail": "會員信箱",
+  "sale.OrderExportModal.memberName": "會員姓名",
+  "sale.OrderExportModal.no": "否",
+  "sale.OrderExportModal.orderCategory": "訂單項目",
+  "sale.OrderExportModal.orderCountry": "下單國家",
+  "sale.OrderExportModal.orderCreatedAt": "訂單建立時間",
+  "sale.OrderExportModal.orderDeleted": "已刪除",
+  "sale.OrderExportModal.orderDiscountId": "折扣編號",
+  "sale.OrderExportModal.orderDiscountName": "折扣名稱",
+  "sale.OrderExportModal.orderDiscountPrice": "折扣金額",
+  "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
+  "sale.OrderExportModal.orderExpired": "已失效",
+  "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
+  "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
+  "sale.OrderExportModal.orderLogId": "訂單編號",
+  "sale.OrderExportModal.orderLogPaymentDate": "付款日期",
+  "sale.OrderExportModal.orderLogStatus": "訂單狀態",
+  "sale.OrderExportModal.orderLogTotalPrice": "訂單總額",
+  "sale.OrderExportModal.orderPartialPaid": "部分付款",
+  "sale.OrderExportModal.orderPartialRefund": "部分退款",
+  "sale.OrderExportModal.orderPaying": "付款中",
+  "sale.OrderExportModal.orderProductCount": "項目總數",
+  "sale.OrderExportModal.orderProductId": "項目編號",
+  "sale.OrderExportModal.orderProductName": "項目名稱",
+  "sale.OrderExportModal.orderProductTotalPrice": "項目總額",
+  "sale.OrderExportModal.orderRefund": "已退款",
+  "sale.OrderExportModal.orderStatus": "訂單狀態",
+  "sale.OrderExportModal.orderSuccess": "已完成",
+  "sale.OrderExportModal.orderUnpaid": "待付款",
+  "sale.OrderExportModal.otherSpecifyCategories": "其他特定項目",
+  "sale.OrderExportModal.paymentLogDetails": "付款方式",
+  "sale.OrderExportModal.paymentLogGateway": "交易渠道",
+  "sale.OrderExportModal.paymentLogNo": "交易編號",
+  "sale.OrderExportModal.paymentLogPaidAt": "付款時間",
+  "sale.OrderExportModal.productEndedAt": "項目到期時間",
+  "sale.OrderExportModal.productOwner": "創作者",
+  "sale.OrderExportModal.productPrice": "項目金額",
+  "sale.OrderExportModal.productQuantity": "項目數量",
+  "sale.OrderExportModal.productType": "項目類別",
+  "sale.OrderExportModal.recipientAddress": "收件地址",
+  "sale.OrderExportModal.recipientName": "收件人",
+  "sale.OrderExportModal.recipientPhone": "收件電話",
+  "sale.OrderExportModal.send": "寄送",
+  "sale.OrderExportModal.sharingCode": "推廣網址",
+  "sale.OrderExportModal.sharingNote": "推廣備註",
+  "sale.OrderExportModal.specify": "指定產品",
+  "sale.OrderExportModal.specifyCouponPlan": "指定折價方案",
+  "sale.OrderExportModal.specifyVoucherPlan": "指定兌換方案",
+  "sale.OrderExportModal.timeRange": "日期範圍",
+  "sale.OrderExportModal.unknownType": "未知",
+  "sale.OrderExportModal.yes": "是",
   "sale.OrderOtherInfoCard.country": "國家",
   "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
   "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
@@ -2430,7 +2490,6 @@
   "sale.PaymentCard.paymentNo": "交易編號",
   "sale.PaymentCard.paymentStatus": "交易狀態",
   "sale.PaymentCard.price": "金額",
-  "sale.SaleCollectionAdminCard.cancel": "取消",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": "開通",
   "sale.SaleCollectionAdminCard.openEquity": "開通權益",
